--- a/processing_scripts/DOC/tmp_doc_2024/tmp_doc_discrete_data_processing_202412.Rmd
+++ b/processing_scripts/DOC/tmp_doc_2024/tmp_doc_discrete_data_processing_202412.Rmd
@@ -94,13 +94,13 @@ anyas_colors <- c('springgreen2', 'cyan2', 'violetred2')
 #inventory_directory <- "https://docs.google.com/spreadsheets/d/1sFWq-WKhemPzbOFInqhCu_Lx0lsO6a_Z/edit#gid=496164093"
 inventory_directory <- "https://docs.google.com/spreadsheets/d/1sFWq-WKhemPzbOFInqhCu_Lx0lsO6a_Z/edit?gid=496164093#gid=496164093"
 
-directory= file.path(here() %>% dirname(), 'tmp_doc_2024/tmp_doc_metadata_2024')
+directory= file.path('tmp_doc_metadata_2024')
 if(!dir.exists(directory)){
   stop("Directory does not exist, check directory path")
 }
 
 #file path for download of the porewater inventory
-file_path = file.path(directory, paste0("porewaterinventory_", Sys.Date(), ".xlsx"))
+file_path = file.path(directory, paste0("porewaterinventory_", "2026-02-11", ".xlsx"))
 
 #check if the porewater inventory was downloaded today and if not, donwload it 
 if (!file.exists(file_path)) {
