--- a/processing_scripts/DOC/COMPASS_TEMPEST_DOC_Collate_AllData.Rmd
+++ b/processing_scripts/DOC/COMPASS_TEMPEST_DOC_Collate_AllData.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "TEMPEST: Porewater DOC"
-author: "2024-2025 Samples"
+author: "2022-2025 Samples"
 date: "`r Sys.Date()`"
 output: 
   pdf_document:
@@ -25,22 +25,31 @@ library(knitr)
 ##Grab 2023 and 2024 and 2025 All Data Files
 ```{r Pull in 2022-2024 data files, message=FALSE, include=FALSE}
 
-# #read in 2023 Dionex Data:
-# dat23 <- read.csv("2023/COMPASS_TEMPEST_SO4_Cl_2023.csv")
-# # head(dat24)
-# colnames(dat23)
+#read in 2023 DOC Data:
+dat22 <- read.csv("tmp_doc_2022/COMPASS_TEMPEST_DOC_2022.csv", colClasses = "character")
+# head(dat24)
+colnames(dat22)
 
-#read in 2024 Dionex Data:
-dat24 <- read.csv("tmp_doc_2024/COMPASS_TEMPEST_DOC_2024.csv")
+#read in 2023 DOC Data:
+dat23 <- read.csv("tmp_doc_2023/COMPASS_TEMPEST_DOC_2023.csv", colClasses = "character")
+# head(dat24)
+colnames(dat23)
+
+#read in 2024 DOC Data:
+dat24 <- read.csv("tmp_doc_2024/COMPASS_TEMPEST_DOC_2024.csv", colClasses = "character")
 # head(dat24)
 colnames(dat24)
 
-#read in 2025 Dionex Data:
-dat25 <- read.csv("tmp_doc_2025/COMPASS_TEMPEST_DOC_2025.csv")
+#read in 2025 DOC Data:
+dat25 <- read.csv("tmp_doc_2025/COMPASS_TEMPEST_DOC_2025.csv", colClasses = "character")
 # head(dat25)
 colnames(dat25)
 
-raw_dat <- bind_rows(dat24, dat25)
+raw_dat <- bind_rows(dat22, dat23, dat24, dat25)
+
+##Sourcewater samples should be NA for depth, all other samples 15 cm. 
+raw_dat <- raw_dat %>% 
+  mutate(Depth_cm = ifelse(str_detect(Sample_ID, "SOURCE"), NA, 15))
 
 ##Convert Collection Date into Date format
 raw_dat$Collection_Date <- as.character(raw_dat$Collection_Date)
@@ -51,18 +60,30 @@ raw_dat$Year <- format(raw_dat$Collection_Date_formatted, format = "%Y")
 raw_dat$Month <- format(raw_dat$Collection_Date_formatted, format = "%m")
 raw_dat$Day <- format(raw_dat$Collection_Date_formatted, format = "%d")
 
+##Uppercase sample IDs
+raw_dat$Sample_ID <- toupper(raw_dat$Sample_ID)
+
 all_dat <- raw_dat %>%
+  rename(
+    Plot = plot, 
+    Grid = grid
+  ) %>%
   dplyr::select(
-         Project,  Zone,  Grid,  Depth_cm,  sample_type,  Vial_ID,  npoc_mgL,  npoc_uM,  npoc_flag,  
-         tdn_mgL,  tdn_uM,  tdn_flag,  Analysis_runtime,  Run_notes,  Collection_Date_YYYYMMDD,  Evacuation_date_YYYMMDD,  Collection_Start_Time_24hrs,  
-         Collection_End_Time_24hrs,  EST_EDT,  Volume_mL
+    Project, Site, Plot, Grid, Depth_cm, Sample_ID, 
+    npoc_mgL, npoc_uM, npoc_flag, tdn_mgL, tdn_uM, tdn_flag, Analysis_runtime,
+    Run_notes, Field_notes, Evacuation_date_YYYMMDD, Collection_Date_YYYYMMDD, 
+    Collection_Start_Time_24hrs, Collection_End_Time_24hrs, EST_EDT, Volume_mL
         # list columns in the order you want them
   )
 
 
 ##Set 4 decimal points max
-# all_dat <- all_dat %>%
-#   mutate(across(where(is.numeric), round, digits = 4))
+all_dat$npoc_uM <- as.numeric(all_dat$npoc_uM)
+all_dat$tdn_uM <- as.numeric(all_dat$tdn_uM)
+
+all_dat <- all_dat %>%
+  mutate(npoc_uM = round(npoc_uM, 2)) %>%
+  mutate(tdn_uM = round(tdn_uM, 2))
 
 ```
 
@@ -83,11 +104,11 @@ metadat$Instrument_ifapplicable <- ""
 #add information about each line: 
 
 metadat$Description <- c("Project name", 
-                         "Zone where sample collected (SW = Seawater, FW = Freshwater, C = 
-                         control, Estuary)", 
+                         "Site where sample collected", 
+                         "Plot where sample collected (SW = Saltwater, FW = Freshwater, C = 
+                         Control, Estuary)", 
                          "Grid where sample collected (Letter + Number)", 
                          "Depth where sample collected", 
-                         "Type of Sample (DOC = Dissolved organic carbon)", 
                          "Sample Identifier", 
                          "Non-Purgeable Organic Carbon (NPOC) concentration in mg/L", 
                          "Non-Purgeable Organic Carbon (NPOC) concentration in uM", 
@@ -97,8 +118,9 @@ metadat$Description <- c("Project name",
                          "QAQC Flags generated during checks of TDN standards, blanks, dups, and spks", 
                          "The date that samples were run on the Shimadzu TOC", 
                          "Any notes generated during QAQC", 
-                         "Date sample collected", 
+                         "Any notes generated during sample collection in the field", 
                          "Date lysimeter evacuated", 
+                         "Date sample collected", 
                          "Time lysimeter evacuated", 
                          "Time sample collected", 
                          "Time zone of sample collection", 
@@ -107,9 +129,9 @@ metadat$Description <- c("Project name",
 metadat$Units <-       c("NA", 
                          "NA",
                          "NA", 
+                         "NA", 
                          "cm",
                          "NA",
-                         "NA", 
                          "mg/L",
                          "uM",
                          "NA", 
@@ -131,8 +153,8 @@ metadat$Instrument_ifapplicable <-
                        c("NA", 
                          "NA",
                          "NA", 
-                         "cm",
                          "NA",
+                         "cm",
                          "NA", 
                          "Shimadzu TOC",
                          "Shimadzu TOC",
@@ -165,143 +187,144 @@ write.csv(metadat, "COMPASS_TEMPEST_DOC_Metadata.csv")
 
 ```
 
-## Visualize Data by Zone   
+## Visualize Data by Grid   
 ```{r Visualize Data, echo=FALSE, warning=FALSE, message = FALSE, fig.width=16, fig.height=10, dpi = 300}
 
 ##Remove Sourcewater
 data_plotting <- raw_dat %>%
-  filter(!str_detect(Source, "SourceWater")) %>%
-  filter(!str_detect(Source, "Rainwater")) 
+  filter(!str_detect(grid, "Source"))
+
+data_plotting$npoc_mgL <- as.numeric(data_plotting$npoc_mgL)
+data_plotting$tdn_mgL <- as.numeric(data_plotting$tdn_mgL)
 
 data_plotting <- data_plotting %>% 
     mutate(
-    Zone_1 = case_when(
-      Zone == "C" ~ "Control",
-      Zone == "FW" ~ "Freshwater",
-      Zone == "SW" ~ "Saltwater",
-      TRUE ~ Zone  # keep everything else unchanged
+    plot_1 = case_when(
+      plot == "C" ~ "Control",
+      plot == "FW" ~ "Freshwater",
+      plot == "SW" ~ "Saltwater",
+      TRUE ~ plot  # keep everything else unchanged
     )
   ) %>%
-  mutate(Zone_1 = factor(Zone_1, levels = c("Control", "Freshwater", "Saltwater")))
+  mutate(plot_1 = factor(plot_1, levels = c("Control", "Freshwater", "Saltwater")))
 
-#Plot data by year and change colors based on Zone:
-viz_cl_plot <- ggplot(data_plotting, aes(x = as.character(Year), y = Cl_ppm, fill = Zone_1)) +
+#Plot data by year and change colors based on Grid:
+viz_npoc_plot <- ggplot(data_plotting, aes(x = as.character(Year), y = npoc_mgL, fill = plot_1)) +
   geom_bar(stat = "identity", position = position_dodge2(preserve = "total")) +
-  facet_wrap( ~ Zone_1, scales="free") +
+  facet_wrap( ~ plot_1, scales="free") +
   scale_fill_manual(values = c(
     "Control" = "springgreen2",
     "Freshwater" = "cyan2",
     "Saltwater" = "violetred2"
   )) +
   theme_classic() +
-  labs(x = " ", y = "Chloride (ppm)", title = "Samples: Chloride") +
+  labs(x = " ", y = "NPOC (mg/L)", title = "TEMPEST Porewater: NPOC") +
   theme(
     panel.spacing = unit(.05, "lines"), 
     panel.border = element_rect(color = "black", fill = NA, linewidth = 1)) + 
   theme(text = element_text(size = 20))+ 
   theme(legend.position = "none")
 
-# viz_cl_plot
 
-viz_so4_plot <- ggplot(data_plotting, aes(x = as.character(Year), y = SO4_ppm, fill = Zone_1)) +
+# viz_npoc_plot
+
+viz_tdn_plot <- ggplot(data_plotting, aes(x = as.character(Year), y = tdn_mgL, fill = plot_1)) +
   geom_bar(stat = "identity", position = position_dodge2(preserve = "total")) +
-  facet_wrap( ~ Zone_1, scales="free") +
+  facet_wrap( ~ plot_1, scales="free") +
   scale_fill_manual(values = c(
     "Control" = "springgreen2",
     "Freshwater" = "cyan2",
     "Saltwater" = "violetred2"
   )) +
   theme_classic() +
-  labs(x = " ", y = "Sulfate (ppm)", title = "Samples: Sulfate") +
+  labs(x = " ", y = "TDN (mg/L)", title = "TEMPEST Porewater: TDN") +
   theme(
     panel.spacing = unit(.05, "lines"), 
     panel.border = element_rect(color = "black", fill = NA, linewidth = 1)) + 
   theme(text = element_text(size = 20))+ 
   theme(legend.position = "none")
 
-# viz_so4_plot
+# viz_tdn_plot
 
-ggarrange(viz_cl_plot, viz_so4_plot, nrow=2, ncol=1)
+ggarrange(viz_npoc_plot, viz_tdn_plot, nrow=2, ncol=1)
 
 
 ```
 
-## Summarized data for Site and Zone 
+## Summarized data for Site and Grid 
 ```{r Summarize and Visualize Data, echo=FALSE, warning=FALSE, message = FALSE, fig.width=16, fig.height=10, dpi = 300}
 
-##Summarize SO4 and Cl by Date and Zone
-Dionex_avg <- data_plotting %>%
-  group_by(Collection_Date_formatted, Zone_1) %>%
-   dplyr::summarize(mean_SO4 = mean(SO4_ppm, na.rm=TRUE),
-            sd_SO4 = sd(SO4_ppm, na.rm=TRUE),
-            mean_Cl = mean(Cl_ppm, na.rm=TRUE),
-            sd_Cl = sd(Cl_ppm, na.rm=TRUE))
+##Summarize DOC by Date and Grid
+DOC_avg <- data_plotting %>%
+  group_by(Collection_Date_formatted, plot_1) %>%
+   dplyr::summarize(mean_npoc = mean(npoc_mgL, na.rm=TRUE),
+            sd_npoc = sd(npoc_mgL, na.rm=TRUE),
+            mean_tdn = mean(tdn_mgL, na.rm=TRUE),
+            sd_tdn = sd(tdn_mgL, na.rm=TRUE))
 
 # Define the specific date breaks you want to display
-specific_breaks <- as.Date(c("2024-01-01", "2025-01-01"))
+specific_breaks <- as.Date(c("2022-01-01","2023-01-01","2024-01-01", "2025-01-01"))
 
-viz_cl_plot_avgs <- ggplot(Dionex_avg, aes(x = Collection_Date_formatted, y = mean_Cl, color = Zone_1)) +
+viz_npoc_plot_avgs <- ggplot(DOC_avg, aes(x = Collection_Date_formatted, y = mean_npoc, color = plot_1)) +
   geom_point(size = 3) + 
-  geom_errorbar(aes(ymin = mean_Cl - sd_Cl, ymax = mean_Cl + sd_Cl), width = 0.2) + 
+  geom_errorbar(aes(ymin = mean_npoc - sd_npoc, ymax = mean_npoc + sd_npoc), width = 0.2) + 
   geom_line() + 
-  facet_wrap( ~ Zone_1, scales="free_y", ncol = 1) +
+  facet_wrap( ~ plot_1, scales="free_y", ncol = 1) +
   scale_color_manual(values = c(
     "Control" = "springgreen2",
     "Freshwater" = "cyan2",
     "Saltwater" = "violetred2"
   )) +
   theme_classic() +
-  labs(x = "Date", y = "Chloride (ppm)", title = "Samples: Chloride") +
+  labs(x = "Date", y = "NPOC (mg/L)", title = "TEMPEST Porewater: NPOC") +
   theme(
     panel.spacing = unit(0.5, "lines"), 
     panel.border = element_rect(color = "black", fill = NA, linewidth = 1)) +
-  # theme(axis.text.x = element_text(angle = 90, hjust = 0.5))+ 
   theme(text = element_text(size = 30))+
   scale_x_date(date_labels = "%b %Y", date_breaks = "1 month") + # Format x-axis labels
   theme(axis.ticks.x = element_line(linewidth = 1))+
   theme(axis.ticks.length.x = unit(0.25, "cm"))+ 
   theme(legend.position = "none")+ 
-  theme(axis.text.x = element_text(angle = 45, hjust = 1))
+  theme(axis.text.x = element_text(angle = 45, hjust = 1, size = 20))
 
-viz_cl_plot_avgs
+viz_npoc_plot_avgs
 
 
-viz_so4_plot_avgs <- ggplot(Dionex_avg, aes(x = Collection_Date_formatted, y = mean_SO4, color = Zone_1)) +
+viz_tdn_plot_avgs <- ggplot(DOC_avg, aes(x = Collection_Date_formatted, y = mean_tdn, color = plot_1)) +
   geom_point(size = 3) + 
-  geom_errorbar(aes(ymin = mean_SO4 - sd_SO4, ymax = mean_SO4 + sd_SO4), width = 0.2) + 
+  geom_errorbar(aes(ymin = mean_tdn - sd_tdn, ymax = mean_tdn + sd_tdn), width = 0.2) + 
   geom_line() + 
-  facet_wrap( ~ Zone_1, scales="free_y", ncol = 1) +
+  facet_wrap( ~ plot_1, scales="free_y", ncol = 1) +
   scale_color_manual(values = c(
     "Control" = "springgreen2",
     "Freshwater" = "cyan2",
     "Saltwater" = "violetred2"
   )) +
   theme_classic() +
-  labs(x = "Date", y = "Sulfate (ppm)", title = "Samples: Sulfate") +
+  labs(x = "Date", y = "TDN (mg/L)", title = "TEMPEST Porewater: TDN") +
   theme(
     panel.spacing = unit(0.5, "lines"), 
     panel.border = element_rect(color = "black", fill = NA, linewidth = 1)) +
-  # theme(axis.text.x = element_text(angle = 90, hjust = 0.5))+ 
   theme(text = element_text(size = 30))+
   scale_x_date(date_labels = "%b %Y", date_breaks = "1 month") + # Format x-axis labels
   theme(axis.ticks.x = element_line(linewidth = 1))+
   theme(axis.ticks.length.x = unit(0.25, "cm"))+ 
   theme(legend.position = "none")+ 
-  theme(axis.text.x = element_text(angle = 45, hjust = 1))
+  theme(axis.text.x = element_text(angle = 45, hjust = 1, size = 20))
 
-viz_so4_plot_avgs
+viz_tdn_plot_avgs
 
-# ggarrange(viz_cl_plot_avgs, viz_so4_plot_avgs, nrow=1, ncol=2)
+# ggarrange(viz_cl_plot_avgs, viz_tdn_plot_avgs, nrow=1, ncol=2)
 
 ```
 
-## Boxplot summary
-```{r Overall Boxplot, echo=FALSE, warning=FALSE, message = FALSE, fig.width=16, fig.height=10, dpi = 300}
+## Boxplot summary for Porewater
+```{r Porewater Overall Boxplot, echo=FALSE, warning=FALSE, message = FALSE, fig.width=16, fig.height=10, dpi = 300}
 
-##Boxplot Summarize SO4 and Cl by Date, Site, and Zone
-viz_cl_boxplot <- ggplot(data_plotting, aes(x = Collection_Date,  y = Cl_ppm, fill = Zone_1)) +
+##Boxplot Summarize DOC by Date, Site, and Grid
+viz_npoc_boxplot <- ggplot(data_plotting, aes(x = Collection_Date,  y = npoc_mgL, fill = plot_1)) +
   geom_boxplot() + 
-  facet_wrap( ~ Zone_1, scales="free_y", ncol = 1) +
+  facet_wrap( ~ plot_1, scales="free_y", ncol = 1) +
   # scale_x_discrete(drop = TRUE) +
   scale_fill_manual(values = c(
     "Control" = "springgreen2",
@@ -309,22 +332,22 @@ viz_cl_boxplot <- ggplot(data_plotting, aes(x = Collection_Date,  y = Cl_ppm, fi
     "Saltwater" = "violetred2"
   ), labels = c("Control", "Freshwater", "Saltwater")) +
   theme_classic() +
-  labs(x = " ", y = "Chloride (ppm)", title = "TEMPEST Porewater: Chloride") +
+  labs(x = " ", y = "NPOC (mg/L)", title = "TEMPEST Porewater: NPOC") +
   theme(
     panel.spacing = unit(0.5, "lines"), 
     panel.border = element_rect(color = "black", fill = NA, linewidth = 1)) +
-  theme(axis.text.x = element_text(angle = 45, vjust = 1, hjust = 1))+ 
+  theme(axis.text.x = element_text(angle = 45, vjust = 1, hjust = 1, size = 20))+ 
   theme(text = element_text(size = 30))+
   theme(axis.ticks.x = element_line(linewidth = 1))+
   theme(axis.ticks.length.x = unit(0.25, "cm"))+ 
   theme(legend.position = "none")
 
-viz_cl_boxplot
+viz_npoc_boxplot
 
 
-viz_so4_boxplot <- ggplot(data_plotting, aes(x = Collection_Date,  y = SO4_ppm, fill = Zone_1)) +
+viz_tdn_boxplot <- ggplot(data_plotting, aes(x = Collection_Date,  y = tdn_mgL, fill = plot_1)) +
   geom_boxplot() + 
-  facet_wrap( ~ Zone_1, scales="free_y", ncol = 1) +
+  facet_wrap( ~ plot_1, scales="free_y", ncol = 1) +
   scale_x_discrete(drop = TRUE) +
   scale_fill_manual(values = c(
     "Control" = "springgreen2",
@@ -332,18 +355,17 @@ viz_so4_boxplot <- ggplot(data_plotting, aes(x = Collection_Date,  y = SO4_ppm, 
     "Saltwater" = "violetred2"
   ), labels = c("Control", "Freshwater", "Saltwater")) +
   theme_classic() +
-  labs(x = " ", y = "Sulfate (ppm)", title = "TEMPEST Porewater: Sulfate") +
+  labs(x = " ", y = "TDN (mg/L)", title = "TEMPEST Porewater: TDN") +
   theme(
     panel.spacing = unit(0.5, "lines"), 
     panel.border = element_rect(color = "black", fill = NA, linewidth = 1)) +
-  theme(axis.text.x = element_text(angle = 45, vjust = 1, hjust = 1))+ 
+  theme(axis.text.x = element_text(angle = 45, vjust = 1, hjust = 1, size = 20))+ 
   theme(text = element_text(size = 30))+
   theme(axis.ticks.x = element_line(linewidth = 1))+
   theme(axis.ticks.length.x = unit(0.25, "cm"))+ 
-  #scale_x_discrete(labels = c("Upland", "Swamp", "Transition", "Wetland", "Surface Water"))+ 
   theme(legend.position = "none")
 
-viz_so4_boxplot
+viz_tdn_boxplot
 
 # ggarrange(viz_cl_boxplot, viz_so4_boxplot, nrow=1, ncol=2)
 
@@ -359,54 +381,177 @@ viz_so4_boxplot
 
 ```
 
-##Calculate summary metrics
-```{r Additional summary metrics, include=FALSE, dpi = 300}
-# It would also be great to add to our collation codes a summary chunk that will calculate value ranges, means, and standard deviations (and errors) for each site, zone, depth for each year; also for each site zone, depth overall; and for each site and zone overall so that we have some easy access to metrics. Was just thinking this might be helpful today when re-collating the DIC data.
+## Boxplot summary for Sourcewater
+```{r Sourcewater Overall Boxplot, echo=FALSE, warning=FALSE, message = FALSE, fig.width=16, fig.height=10, dpi = 300}
+
+##Only Sourcewater
+data_plotting_source <- raw_dat %>%
+  filter(str_detect(grid, "Source"))
+
+data_plotting_source$npoc_mgL <- as.numeric(data_plotting_source$npoc_mgL)
+data_plotting_source$tdn_mgL <- as.numeric(data_plotting_source$tdn_mgL)
+
+data_plotting_source <- data_plotting_source %>% 
+    mutate(
+    plot_1 = case_when(
+      plot == "C" ~ "Control",
+      plot == "FW" ~ "Freshwater",
+      plot == "SW" ~ "Saltwater",
+      plot == "ESTUARY" ~ "Estuary",
+      TRUE ~ plot  # keep everything else unchanged
+    )
+  ) %>%
+  mutate(plot_1 = factor(plot_1, levels = c("Control", "Freshwater", "Saltwater", "Estuary")))
+
+##Boxplot Summarize DOC by Date, Site, and Grid
+viz_npoc_boxplot <- ggplot(data_plotting_source, aes(x = Collection_Date,  y = npoc_mgL, fill = plot_1)) +
+  geom_boxplot() + 
+  facet_wrap( ~ plot_1, scales="free_y", ncol = 1) +
+  # scale_x_discrete(drop = TRUE) +
+  scale_fill_manual(values = c(
+    "Control" = "springgreen2",
+    "Freshwater" = "cyan2",
+    "Saltwater" = "violetred2", 
+    "Estuary" = "gold"
+  ), labels = c("Control", "Freshwater", "Saltwater", "Estuary")) +
+  theme_classic() +
+  labs(x = " ", y = "NPOC (mg/L)", title = "TEMPEST Sourcewater: NPOC") +
+  theme(
+    panel.spacing = unit(0.5, "lines"), 
+    panel.border = element_rect(color = "black", fill = NA, linewidth = 1)) +
+  theme(axis.text.x = element_text(angle = 45, vjust = 1, hjust = 1))+ 
+  theme(text = element_text(size = 30))+
+  theme(axis.ticks.x = element_line(linewidth = 1))+
+  theme(axis.ticks.length.x = unit(0.25, "cm"))+ 
+  theme(legend.position = "none")
+
+viz_npoc_boxplot
+
+
+viz_tdn_boxplot <- ggplot(data_plotting_source, aes(x = Collection_Date,  y = tdn_mgL, fill = plot_1)) +
+  geom_boxplot() + 
+  facet_wrap( ~ plot_1, scales="free_y", ncol = 1) +
+  scale_x_discrete(drop = TRUE) +
+  scale_fill_manual(values = c(
+    "Control" = "springgreen2",
+    "Freshwater" = "cyan2",
+    "Saltwater" = "violetred2", 
+    "Estuary" = "gold"
+  ), labels = c("Control", "Freshwater", "Saltwater", "Estuary")) +
+  theme_classic() +
+  labs(x = " ", y = "TDN (mg/L)", title = "TEMPEST Porewater: TDN") +
+  theme(
+    panel.spacing = unit(0.5, "lines"), 
+    panel.border = element_rect(color = "black", fill = NA, linewidth = 1)) +
+  theme(axis.text.x = element_text(angle = 45, vjust = 1, hjust = 1))+ 
+  theme(text = element_text(size = 30))+
+  theme(axis.ticks.x = element_line(linewidth = 1))+
+  theme(axis.ticks.length.x = unit(0.25, "cm"))+ 
+  #scale_x_discrete(labels = c("Upland", "Swamp", "Transition", "Wetland", "Surface Water"))+ 
+  theme(legend.position = "none")
+
+viz_tdn_boxplot
+
+# ggarrange(viz_cl_boxplot, viz_so4_boxplot, nrow=1, ncol=2)
+
+# # Save as a PNG
+# png("COMPASS_SynopticCB_Cl_alldata.png", width = 2000, height = 1200, res = 100) 
+# print(viz_cl_boxplot)  # For ggplot objects, use print()
+# dev.off() 
+# 
+# # Save as a PNG
+# png("COMPASS_SynopticCB_SO4_alldata.png", width = 2000, height = 1200, res = 100) 
+# print(viz_so4_boxplot)  # For ggplot objects, use print()
+# dev.off() 
+
+```
+
+##Calculate summary metrics for Porewater
+```{r Porewater additional summary metrics, include=FALSE, dpi = 300}
+# It would also be great to add to our collation codes a summary chunk that will calculate value ranges, means, and standard deviations (and errors) for each site, Grid, depth for each year; also for each site Grid, depth overall; and for each site and Grid overall so that we have some easy access to metrics. Was just thinking this might be helpful today when re-collating the DIC data.
 
 colnames(data_plotting)
 
-##Metrics for each zone for each year
+##Metrics for each Grid for each year
 summary_by_year <- data_plotting %>%
-  group_by(Year, Zone_1) %>%
+  group_by(Year, plot_1) %>%
    reframe(
-     min_Cl_ppm = min(Cl_ppm, na.rm=TRUE),
-     max_Cl_ppm = max(Cl_ppm, na.rm=TRUE), 
-     mean_Cl_ppm = mean(Cl_ppm, na.rm=TRUE), 
-     sd_Cl_ppm = sd(Cl_ppm, na.rm=TRUE), 
+     min_npoc_mgL = min(npoc_mgL, na.rm=TRUE),
+     max_npoc_mgL = max(npoc_mgL, na.rm=TRUE), 
+     mean_npoc_mgL = mean(npoc_mgL, na.rm=TRUE), 
+     sd_npoc_mgL = sd(npoc_mgL, na.rm=TRUE), 
 
-     min_SO4_ppm = min(SO4_ppm, na.rm=TRUE),
-     max_SO4_ppm = max(SO4_ppm, na.rm=TRUE), 
-     mean_SO4_ppm = mean(SO4_ppm, na.rm=TRUE), 
-     sd_SO4_ppm = sd(SO4_ppm, na.rm=TRUE)) %>%
+     min_tdn_mgL = min(tdn_mgL, na.rm=TRUE),
+     max_tdn_mgL = max(tdn_mgL, na.rm=TRUE), 
+     mean_tdn_mgL = mean(tdn_mgL, na.rm=TRUE), 
+     sd_tdn_mgL = sd(tdn_mgL, na.rm=TRUE)) %>%
   mutate(across(where(is.numeric), round, digits = 4)) 
 
-##Metrics for each zone for all years
+##Metrics for each Grid for all years
 summary_all_years <- data_plotting %>%
-  group_by(Zone_1) %>%
+  group_by(plot_1) %>%
    reframe(
-     min_Cl_ppm = min(Cl_ppm, na.rm=TRUE),
-     max_Cl_ppm = max(Cl_ppm, na.rm=TRUE), 
-     mean_Cl_ppm = mean(Cl_ppm, na.rm=TRUE), 
-     sd_Cl_ppm = sd(Cl_ppm, na.rm=TRUE), 
+     min_npoc_mgL = min(npoc_mgL, na.rm=TRUE),
+     max_npoc_mgL = max(npoc_mgL, na.rm=TRUE), 
+     mean_npoc_mgL = mean(npoc_mgL, na.rm=TRUE), 
+     sd_npoc_mgL = sd(npoc_mgL, na.rm=TRUE), 
 
-     min_SO4_ppm = min(SO4_ppm, na.rm=TRUE),
-     max_SO4_ppm = max(SO4_ppm, na.rm=TRUE), 
-     mean_SO4_ppm = mean(SO4_ppm, na.rm=TRUE), 
-     sd_SO4_ppm = sd(SO4_ppm, na.rm=TRUE)) %>%
+     min_tdn_mgL = min(tdn_mgL, na.rm=TRUE),
+     max_tdn_mgL = max(tdn_mgL, na.rm=TRUE), 
+     mean_tdn_mgL = mean(tdn_mgL, na.rm=TRUE), 
+     sd_tdn_mgL = sd(tdn_mgL, na.rm=TRUE)) %>%
   mutate(across(where(is.numeric), round, digits = 4)) 
 
 ```
 
-## Summary Tables
-```{r Summary table metrics, echo = FALSE, message = FALSE, dpi = 100}
+##Calculate summary metrics for Sourcewater
+```{r Sourcewater additional summary metrics, include=FALSE, dpi = 300}
+# It would also be great to add to our collation codes a summary chunk that will calculate value ranges, means, and standard deviations (and errors) for each site, Grid, depth for each year; also for each site Grid, depth overall; and for each site and Grid overall so that we have some easy access to metrics. Was just thinking this might be helpful today when re-collating the DIC data.
+
+colnames(data_plotting_source)
+
+##Metrics for each Grid for each year
+summary_by_year_source <- data_plotting_source %>%
+  group_by(Year, plot_1) %>%
+   reframe(
+     min_npoc_mgL = min(npoc_mgL, na.rm=TRUE),
+     max_npoc_mgL = max(npoc_mgL, na.rm=TRUE), 
+     mean_npoc_mgL = mean(npoc_mgL, na.rm=TRUE), 
+     sd_npoc_mgL = sd(npoc_mgL, na.rm=TRUE), 
+
+     min_tdn_mgL = min(tdn_mgL, na.rm=TRUE),
+     max_tdn_mgL = max(tdn_mgL, na.rm=TRUE), 
+     mean_tdn_mgL = mean(tdn_mgL, na.rm=TRUE), 
+     sd_tdn_mgL = sd(tdn_mgL, na.rm=TRUE)) %>%
+  mutate(across(where(is.numeric), round, digits = 4)) 
+
+##Metrics for each Grid for all years
+summary_all_years_source <- data_plotting_source %>%
+  group_by(plot_1) %>%
+   reframe(
+     min_npoc_mgL = min(npoc_mgL, na.rm=TRUE),
+     max_npoc_mgL = max(npoc_mgL, na.rm=TRUE), 
+     mean_npoc_mgL = mean(npoc_mgL, na.rm=TRUE), 
+     sd_npoc_mgL = sd(npoc_mgL, na.rm=TRUE), 
+
+     min_tdn_mgL = min(tdn_mgL, na.rm=TRUE),
+     max_tdn_mgL = max(tdn_mgL, na.rm=TRUE), 
+     mean_tdn_mgL = mean(tdn_mgL, na.rm=TRUE), 
+     sd_tdn_mgL = sd(tdn_mgL, na.rm=TRUE)) %>%
+  mutate(across(where(is.numeric), round, digits = 4)) 
+
+```
+
+## Summary Tables for Porewater
+```{r Porewater summary table metrics, echo = FALSE, message = FALSE, dpi = 100}
 
 library(kableExtra)
 
 kable(
-  summary_by_year[, c("Year", "Zone_1", "min_Cl_ppm",	"max_Cl_ppm",	"mean_Cl_ppm", "min_SO4_ppm",	"max_SO4_ppm",	"mean_SO4_ppm")],  
+  summary_by_year[, c("Year", "plot_1", "min_npoc_mgL",	"max_npoc_mgL",	"mean_npoc_mgL", "min_tdn_mgL",	"max_tdn_mgL",	"mean_tdn_mgL")],  
   format = "latex",
   booktabs = TRUE,
-  caption = "Summary Statistics by Year"
+  caption = "Porewater Summary Statistics by Year"
 ) %>%
   kable_styling(
     latex_options = c("hold_position", "striped", "scale_down"),
@@ -416,10 +561,44 @@ kable(
   column_spec(1, bold = TRUE)
 
 kable(
-  summary_all_years[, c("Zone_1", "min_Cl_ppm",	"max_Cl_ppm",	"mean_Cl_ppm", "min_SO4_ppm",	"max_SO4_ppm",	"mean_SO4_ppm")],  
+  summary_all_years[, c("plot_1", "min_npoc_mgL",	"max_npoc_mgL",	"mean_npoc_mgL", "min_tdn_mgL",	"max_tdn_mgL",	"mean_tdn_mgL")],  
   format = "latex",
   booktabs = TRUE,
-  caption = "Summary Statistics by Zone"
+  caption = "Porewater Summary Statistics by Grid"
+) %>%
+  kable_styling(
+    latex_options = c("hold_position", "striped", "scale_down"),
+    font_size = 12
+  ) %>%
+  row_spec(0, bold = TRUE) %>%   # header
+  column_spec(1, bold = TRUE)
+
+```
+
+
+## Summary Tables for Sourcewater
+```{r Sourcewater summary table metrics, echo = FALSE, message = FALSE, dpi = 100}
+
+library(kableExtra)
+
+kable(
+  summary_by_year_source[, c("Year", "plot_1", "min_npoc_mgL",	"max_npoc_mgL",	"mean_npoc_mgL", "min_tdn_mgL",	"max_tdn_mgL",	"mean_tdn_mgL")],  
+  format = "latex",
+  booktabs = TRUE,
+  caption = "Sourcewater Summary Statistics by Year"
+) %>%
+  kable_styling(
+    latex_options = c("hold_position", "striped", "scale_down"),
+    font_size = 12
+  ) %>%
+  row_spec(0, bold = TRUE) %>%   # header
+  column_spec(1, bold = TRUE)
+
+kable(
+  summary_by_year_source[, c("plot_1", "min_npoc_mgL",	"max_npoc_mgL",	"mean_npoc_mgL", "min_tdn_mgL",	"max_tdn_mgL",	"mean_tdn_mgL")],  
+  format = "latex",
+  booktabs = TRUE,
+  caption = "Sourcewater Summary Statistics by Grid"
 ) %>%
   kable_styling(
     latex_options = c("hold_position", "striped", "scale_down"),
@@ -434,10 +613,17 @@ kable(
 ```{r write out summarized data, include=FALSE}
 
 #write out a csv of all the data to the main folder: 
-write.csv(summary_by_year, "COMPASS_TEMPEST_PW_SO4_Cl_Summarized_By_Year.csv")
+write.csv(summary_by_year, "COMPASS_TEMPEST_PW_DOC_Summarized_By_Year.csv")
 
 #write out a csv of the metadata associated with the data: 
-write.csv(summary_all_years, "COMPASS_TEMPEST_PW_SO4_Cl_Summarized_Years_Combined.csv")
+write.csv(summary_all_years, "COMPASS_TEMPEST_PW_DOC_Summarized_Years_Combined.csv")
+
+
+#write out a csv of all the data to the main folder: 
+write.csv(summary_by_year_source, "COMPASS_TEMPEST_SOURCE_DOC_Summarized_By_Year.csv")
+
+#write out a csv of the metadata associated with the data: 
+write.csv(summary_all_years_source, "COMPASS_TEMPEST_SOURCE_DOC_Summarized_Years_Combined.csv")
 
 ```
 
