--- a/processing_scripts/DOC/tmp_doc_2025/COMPASS_TEMPEST_Collate_DOC_2025_Data.Rmd
+++ b/processing_scripts/DOC/tmp_doc_2025/COMPASS_TEMPEST_Collate_DOC_2025_Data.Rmd
@@ -27,13 +27,21 @@ all_data <- files %>%
 
 all_data <- all_data[, -which(names(all_data) == "X")]
 
+##Make Sample IDs match 2022/2023 data
+all_data$Sample_ID <- paste0("TMP_", all_data$Vial_ID)
+all_data$Sample_ID <- gsub("_DOC_", "_", all_data$Sample_ID)
+
 colnames(all_data)
 
 final_data <- all_data %>%
-    rename(
-      Zone = plot, 
-      Grid = grid
-    )
+    mutate(
+      Project = "COMPASS", 
+      Site = "TEMPEST", 
+      ) %>%
+  rename (
+    Analyte = sample_type
+  ) %>%
+    select (-c(date, Vial_ID)) 
 
 
 ```
